fixed z-index

--- a/assets/_sass/components/_modal.scss
+++ b/assets/_sass/components/_modal.scss
@@ -3,7 +3,7 @@
 
   display: none;
   position: fixed;
-  z-index: 10;
+  z-index: 15;
   background-color: $color-white;
   box-shadow: 0 2px 9px -1px rgba(0, 0, 0, 0.29);
   border-radius: 3px;
